# pytest-examples

./: README.md  pyproject.toml
ch1/: test_five.py  test_four.py  test_three.py
ch2/: README.md  test_card.py  test_card_fail.py  test_helper.py
ch3/: README.md  test_autouse.py  test_fixtures.py  test_mod_scope.py  test_rename_2.py  test_rename_fixture.py
ch3/dir_scope_test1/: conftest.py
ch3/dir_scope_test2/: conftest.py
ch3/dir_scope_test3/: conftest.py  test_some.py
ch3/dir_scope_test4/: conftest.py
ch3/exercises/: test_fixtures.py
ch4/: README.md  conftest.py  conftest_from_ch3.py  hello_world.py  test_print.py  test_tmp.py  test_version.py
