[tool.poetry]
name = "pytest-examples"
version = "0.1.0"
description = ""
authors = ["anarinya <5115364+anarinya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
cards = {path = "cards_project"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
